--- a/report.tex
+++ b/report.tex
@@ -259,10 +259,10 @@ brazil
 	%\include{sections/02manisub}
 	\include{sections/02manisubs}
 	%\include{sections/02anaviab}
-	%\include{sections/03conceito}
-	%\include{sections/04espfunc}
-	%\include{sections/05abranghw}
-	%\include{sections/06abrangsw}
+	\include{sections/03conceito}
+	\include{sections/04espfunc}
+	\include{sections/05abranghw}
+	\include{sections/06abrangsw}
 	%\include{sections/07abrangconf}
 	%\include{sections/08espinterf}
 	%\include{sections/09testes}
