--- a/ABNT/abntex2_report.cls
+++ b/ABNT/abntex2_report.cls
@@ -788,9 +788,9 @@
 		
 		\vspace*{-1cm}
 		
-		\begin{flushright}
-			\textbf{\footnotesize \techprodsimple - \imprimirprodtecnica}
-		\end{flushright}
+		%\begin{flushright}
+			%\textbf{\footnotesize \techprodsimple - \imprimirprodtecnica}
+		%\end{flushright}
 		
 		\centering
 		\vspace*{1cm}
