--- a/sections/00execsum.tex
+++ b/sections/00execsum.tex
@@ -1,7 +1,9 @@
 %=========================================================
 %---- Sumário Executivo ------------------------------------
 %=========================================================
-O projeto Automação de Manipuladores, também conhecido como \textbf{ManiSub} se configura sob o Termo de Cooperação Tecnológica nº 003/2014 entre o Serviço Nacional de Aprendizagem Industrial, Departamento Regional da Bahia - Senai/DR/BA e a Associação Brasileira de Pesquisa e Inovação Industrial - EMBRAPII, sendo estes fomentadores do projeto. Diante disso, formou-se um termo de parceria de natureza técnica e financeira com a empresa Petrobras e o SENAI/DR/BA totalizando R\$ 0000000,98 como recursos financeiros para a realização do devido projeto. O mesmo foi assinado em 25 de dezembro de 2018 e esta data foi considerada como a data inicial do projeto, no entanto na reunião de kick-off do projeto foi considerada para o início técnico do projeto o dia 07 de janeiro de 2019. O prazo de execução planejado é de 10 meses.
+O projeto de Manipuladores - Desafio #2, também conhecido como \textbf{xxxxx} se configura sob o Programa de Formação de Novos Talentos do Serviço Nacional de Aprendizagem Industrial, Departamento Regional da Bahia - Senai/DR/BA, sendo este o principal fomentador do programa. 
+O projeto foi considerado como início técnico do projeto o dia 00 de bolsoneiro de 2020. 
+O prazo de execução planejado é de xx meses.
 
 %=========================================================
 
