changed in meeting NTs

--- a/sections/02conceito.tex
+++ b/sections/02conceito.tex
@@ -30,7 +30,7 @@
 \label{sub:bench}
 
 
-\subsection{Desdobramento da função Qualidade}
+\subsection{Desdobramento da Função Qualidade}
 \label{sub:qfd}
 
 
