--- a/sections/03desenvolvimento.tex
+++ b/sections/03desenvolvimento.tex
@@ -25,6 +25,7 @@
 
 \subsection{Funcionalidade A}
 \label{sub:funcA}
+%aqui vc apresenta a funcionalidade
 
 \subsubsection{Descrição} %incluir o fluxograma da funcionalidade aqui
 \label{ssub:descA}
@@ -73,6 +74,17 @@
 %------------------------------------------------------------------
 \section{Simulação do sistema}
 \label{sec:simul}
+
+
+\section{Integração}
+\label{sec:integra}
+
+
+
+\section{Testes realizados}
+\label{sec:testes}
+
+
 
 
 
