--- a/sections/05confiabilidade.tex
+++ b/sections/05confiabilidade.tex
@@ -2,7 +2,7 @@
 \label{chap:conf}
 
 %------------------------------------------------------------------
-\section{Estudo dos modos e efeitos de falhas}
+\section{Análise dos modos e efeitos de falhas}
 \label{sec:fmeca}
 
 %------------------------------------------------------------------
