--- a/report.tex
+++ b/report.tex
@@ -272,7 +272,7 @@ brazil
 	\include{sections/02conceito}
 	\include{sections/03desenvolvimento}
 	\include{sections/04resultados}
-	\include{sections/05conhecimento}
+	\include{sections/05confiabilidade}
 	\include{sections/06conhecimento}
 	\include{sections/07conclusao}
 % --------------------------------------------------------------------------
