--- a/sections/01introducao.tex
+++ b/sections/01introducao.tex
@@ -1,6 +1,10 @@
 \chapter{INTRODUÇÃO}
 \label{chap:intro}
-Como parte da etapa de desenvolvimento do projeto de Automação de Operações com \textit{\acs{ROV}}, 
+Como parte da etapa de desenvolvimento do projeto de Automação de Operações com \textit{\acs{ROV}}, \cite{pybullet}
+
+\cite{sivvcev2018underwater}
+
+
 
 %------------------------------------------------------------------
 \section{Objetivos}
