--- a/sections/01introducao.tex
+++ b/sections/01introducao.tex
@@ -4,7 +4,7 @@ Como parte da etapa de desenvolvimento do projeto de Automação de Operações 
 
 \cite{sivvcev2018underwater}
 
-
+Entretanto
 
 %------------------------------------------------------------------
 \section{Objetivos}
