add new authors

--- a/report.tex
+++ b/report.tex
@@ -131,7 +131,7 @@ brazil
 	Moudu Zir\\
 	Linki Terri\\
 	Zakka Santi\\
-	Toldu Jamo\\
+	Toldu Jamou\\
 	Maroc Sieru\
 }
 \newcommand{\autoresexternos}{
