add two chapter about thesis

--- a/report.tex
+++ b/report.tex
@@ -275,6 +275,8 @@ brazil
 	\include{sections/05confiabilidade}
 	\include{sections/06conhecimento}
 	\include{sections/07conclusao}
+	%\include{sections/02referencial}
+	%\include{sections/03metodo}
 % --------------------------------------------------------------------------
 % Referências
 	\cleardoublepage
